--- a/Css/style.css
+++ b/Css/style.css
@@ -40,7 +40,7 @@ input:focus{
     align-items: center;
     padding-left: 10%;
     padding-right: 10%;
-    border: solid rgb(68, 255, 0) 1px;
+    /*border: solid rgb(68, 255, 0) 1px;*/
 }
 
 #contact_column1{
@@ -129,7 +129,7 @@ input:focus{
 
 #btn_create_contact{
     margin-top: 20px;
-    width: 90%;
+    width: 75%;
     height: 50px;
     font-size: 1.2rem;
     color: var(--accent-color);
@@ -142,6 +142,24 @@ input:focus{
     transform: scale(1.05);
     color: var(--background-color);
     background-color: var(--accent-color);
+}
+
+#btn_create_back{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 75%;
+    height: 50px;
+    font-size: 1.2rem;
+    color: var(--error-color);
+    background-color: var(--background-color);
+    border: solid 1px var(--error-color);
+    transition: all 0.1s;
+}
+
+#btn_create_back:hover{
+    transform: scale(1.05);
+    color: var(--background-color);
+    background-color: var(--error-color);
 }
 
 
@@ -221,8 +239,8 @@ input:focus{
 }
 
 #btn_modify_contact{
-    margin-top: 20px;
-    width: 90%;
+    margin-top: 10px;
+    width: 75%;
     height: 50px;
     font-size: 1.2rem;
     color: var(--accent-color);
@@ -235,6 +253,23 @@ input:focus{
     transform: scale(1.05);
     color: var(--background-color);
     background-color: var(--accent-color);
+}
+
+#btn_delete_contact{
+    margin-top: 20px;
+    width: 75%;
+    height: 50px;
+    font-size: 1.2rem;
+    color: var(--error-color);
+    background-color: var(--background-color);
+    border: solid 1px var(--error-color);
+    transition: all 0.1s;
+}
+
+#btn_delete_contact:hover{
+    transform: scale(1.05);
+    color: var(--background-color);
+    background-color: var(--error-color);
 }
 
 #modify_contact_fields{
@@ -296,6 +331,23 @@ input:focus{
     text-align: left;
 }
 
+#btn_modify_back{
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 75%;
+    height: 50px;
+    font-size: 1.2rem;
+    color: var(--accent-color);
+    background-color: var(--background-color);
+    border: solid 1px var(--accent-color);
+    transition: all 0.1s;
+}
+
+#btn_modify_back:hover{
+    transform: scale(1.05);
+    color: var(--background-color);
+    background-color: var(--accent-color);
+}
 
 /*------------- Email field -------------*/
 .email_field{
@@ -454,4 +506,10 @@ input:focus{
     transform: scale(1.1);
     background-color: var(--accent-color);
     color: var(--background-color);
+}
+
+.errors_container{
+    display: flex;
+    flex-direction: column;
+    color: var(--error-color);
 }
